# cppmath

./: .gitignore  CMakeLists.txt
include/geometry/: AABB.hpp  Vector2.hpp
include/math/: TypeTraits.hpp  common_type.hpp  compat.hpp  math.hpp  type_traits.hpp
include/math/geometry/: AABB.hpp  AABB.inl  Intersection.hpp  Line2.hpp  Line2.inl  LineStrip.hpp  LineStrip.inl  OffsetPolygon.hpp  Point2.hpp  PointSet.hpp  Polygon.hpp  Polygon.inl  TriangleStrip.hpp  TriangleStrip.inl  Vector.hpp  Vector.inl  Vector2.hpp  VectorData.hpp  algorithm.hpp  intersect.hpp  mesh_intersect.hpp
src/: math.cpp
src/math/: math.cpp
test/: CMakeLists.txt  algorithm.cpp  graphical.cpp  parallel.cpp  parallel_identical.cpp  polygonadapter.cpp  sweepgraphical.cpp  vector_optypes.cpp
